# ConwayLifeGame

./: CMakeLists.txt  main.cpp  test_pattern
